--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/Snowdevil-Highfly-Chastot/Eve-Testing-Site#readme",
   "devDependencies": {
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.5.3",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
   }
