--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,8 +1,12 @@
 {
     "compilerOptions": {
-        "outDir": "../built",
+        "outDir": "./dist/",
+        "noImplicitAny": true,
+        "module": "es6",
+        "target": "es5",
+        "jsx": "react",
         "allowJs": true,
-        "target": "es5"
+        "moduleResolution": "node"
     },
     "include": [
         "./**/*"
