--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A price checker for Eve Online",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
